# clue-llm

./: .gitignore  CLAUDE.md  README.md  actions.ts  biome.json  eval-smoketest.ts  main.py  mdx-components.tsx  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
TODOs/: prior-art.md
analysis/: calculate_analytics.py
app/: globals.css  layout.tsx  page.tsx
components/: editable-code-block.tsx  game-display.tsx  game-viewer-client.tsx  game-viewer.tsx  proposition-renderer.tsx  python-provided.tsx  server-python-provided.tsx  static-code-block.tsx  static-multi-file-code-block.tsx  stats-display-client.tsx  stats-display.tsx  test-component.tsx
fine-tune-data/: README.md  all-cases.jsonl  correct.jsonl  least-confident-wrong.jsonl  most-confident-wrong.jsonl
hooks/: use-pyodide.ts
lib/: clue-predictions.test.ts  clue-predictions.ts  clue-schema.ts  clue-test-cases.json  clue-test-cases.test.ts  clue-test-cases.ts  few-shot-example-clue-test-cases.json  load-example.ts  load-stats.ts  logprob-utils.test.ts  logprob-utils.ts  one-clue-test-case.json  predict.ts  schemas.test.ts  schemas.ts  single-token-strings.json  single-token-strings.test.ts  single-token-strings.ts  ui.test.ts  ui.ts
python-scripts/: README.md  calculate_analytics.py  calculate_model_comparison_analytics.py  clue_game.py  clue_models.py  count.py  generate_and_dump_test_cases.py  generate_clue_game.py  generate_serialized_game.py  py_sat_test.py  simple_utils.py  single_token_strings.py  solver.py  sympy_test.py  test_clue_batch.py  test_clue_game.py  test_clue_game_simple.py  (+2 more)
(+12 files in other folders)
