[project]
name = "clue-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.10.6",
    "python-sat>=1.8.dev26",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "kaleido>=1.2.0",
    "plotly>=6.5.2",
    "pyright>=1.1.408",
    "ruff>=0.14.11",
]
